--- a/assets/custom.css
+++ b/assets/custom.css
@@ -64,7 +64,9 @@ img {
 }
 
 .button {
-  display: block;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   font-size: 12px;
   font-weight: 600;
   line-height: 17px;
@@ -79,7 +81,6 @@ img {
 
 @media (min-width: 576px) {
   .button {
-    display: block;
     padding: 10px 52px;
     font-size: 16px;
     line-height: 19px;
@@ -88,7 +89,6 @@ img {
 
 @media (min-width: 768px) {
   .button {
-    display: block;
     padding: 12px 92px;
     font-size: 18px;
     line-height: 21px;
@@ -97,7 +97,6 @@ img {
 
 @media (min-width: 992px) {
   .button {
-    display: block;
     padding: 15px 102px;
     font-size: 20px;
     line-height: 23px;
@@ -106,7 +105,6 @@ img {
 
 @media (min-width: 1200px) {
   .button {
-    display: block;
     padding: 20px 122px;
     font-size: 22px;
     line-height: 25px;
