--- a/assets/component-localization-form.css
+++ b/assets/component-localization-form.css
@@ -442,11 +442,11 @@ noscript .localization-selector.link {
 }
 
 /* Menu drawer */
-@media screen and (min-width: 990px) {
+/* @media screen and (min-width: 990px) { */
   .menu-drawer__localization {
     display: none;
   }
-}
+/* } */
 
 .menu-drawer__localization localization-form {
   display: block;
