--- a/snippets/header-dropdown-menu.liquid
+++ b/snippets/header-dropdown-menu.liquid
@@ -14,7 +14,7 @@
             <details id="Details-HeaderMenu-{{ forloop.index }}">
               <summary
                 id="HeaderMenu-{{ link.handle }}"
-                class="header__menu-item list-menu__item link focus-inset"
+                class="header__menu-item header__menu-item_custom list-menu__item link focus-inset"
               >
                 <span
                   {%- if link.child_active %}
@@ -48,7 +48,7 @@
                       <details id="Details-HeaderSubMenu-{{ link.handle }}-{{ childlink.handle }}">
                         <summary
                           id="HeaderMenu-{{ link.handle }}-{{ childlink.handle }}"
-                          class="header__menu-item link link--text list-menu__item focus-inset caption-large"
+                          class="header__menu-item header__menu-item_custom link link--text list-menu__item focus-inset caption-large"
                         >
                           <span>{{ childlink.title | escape }}</span>
                           {% render 'icon-caret' %}
@@ -89,6 +89,7 @@
             {% endif %}
           >
             <span
+              class="header__menu-item_custom"
               {%- if link.current %}
                 class="header__active-menu-item"
               {% endif %}
